Svga和Webp一起使用

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,11 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.11.0"
 
     implementation 'com.github.yyued:SVGAPlayer-Android:2.6.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+
+    implementation 'com.github.penfeizhou.android.animation:apng:2.26.0'
+    implementation 'com.github.penfeizhou.android.animation:glide-plugin:2.26.0'
+    implementation 'com.github.penfeizhou.android.animation:gif:2.26.0'
 }
